Line drawing first version

--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,11 @@
   <build>
     <finalName>sgraphic</finalName>
   </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+    </dependencies>
 </project>
